--- a/Android/HW1/app/src/main/res/values/colors.xml
+++ b/Android/HW1/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorAccent">#673AB7</color>
+    <color name="grey">#8e8e8e</color>
+    <color name="darkGrey">#575656</color>
 </resources>
