--- a/Android/HW1/app/src/main/res/drawable/track.xml
+++ b/Android/HW1/app/src/main/res/drawable/track.xml
@@ -10,7 +10,7 @@
 
     <item android:state_checked="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
+            <solid android:color="@color/sky" />
             <corners android:radius="100sp" />
             <stroke android:width="1dp" android:color="@color/grey" />
         </shape>
