--- a/Android/HW1/app/src/main/res/values/colors.xml
+++ b/Android/HW1/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#673AB7</color>
     <color name="grey">#8e8e8e</color>
     <color name="darkGrey">#575656</color>
+    <color name="sky">#7290E4</color>
+    <color name="sun">#F4DD0E</color>
 </resources>
