--- a/Android/HW3/app/src/main/res/layout/activity_main.xml
+++ b/Android/HW3/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:windowSoftInputMode="adjustResize"
     tools:context=".MainActivity">
 
     <TextView
@@ -16,7 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/output_button" />
+        app:layout_constraintTop_toBottomOf="@+id/second_activity_button" />
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/theme_switcher"
@@ -41,12 +40,12 @@
         tools:ignore="TextSizeCheck">
 
         <TextView
-            android:id="@+id/output_field"
+            android:id="@+id/main_activity_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif"
             android:gravity="center"
-            android:text="@string/output_hint"
+            android:text="@string/main_activity_text"
             android:textSize="24sp" />
     </ScrollView>
 
@@ -74,10 +73,11 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/output_button"
+        android:id="@+id/second_activity_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/input_button"
+        android:onClick="startSecondActivity"
+        android:text="@string/second_activity_button"
         app:layout_constraintBottom_toTopOf="@+id/person_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
