--- a/Android/HW5/app/src/main/res/values/themes.xml
+++ b/Android/HW5/app/src/main/res/values/themes.xml
@@ -2,13 +2,27 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.HW5" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/colorAccent</item>
-         <item name="colorPrimaryVariant">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorAccent</item>
+        <item name="colorPrimaryVariant">@color/colorAccent</item>
     </style>
+
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize the track color of SwitchCompat -->
         <item name="colorControlNormal">#FFFFFF</item>
     </style>
-    <style name="TextColor"><item name="android:textColor">@color/black</item></style>
+
+    <style name="TextColor">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
     <style name="Theme.HW5" parent="Base.Theme.HW5" />
+
+    <style name="Theme.HW5.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.HW5.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.HW5.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
