--- a/Android/HW7/app/src/main/res/layout/activity_main.xml
+++ b/Android/HW7/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,10 @@
         android:text="@string/person"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/maps_button"
+        app:layout_constraintVertical_bias="0.9" />
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/theme_switcher"
@@ -27,5 +29,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:track="@drawable/track" />
+
+    <Button
+        android:id="@+id/maps_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/maps_button"
+        style="@style/ButtonStandard"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
