--- a/Android/HW7/app/src/main/res/values/themes.xml
+++ b/Android/HW7/app/src/main/res/values/themes.xml
@@ -2,13 +2,23 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.HW7" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/colorAccent</item>
-         <item name="colorPrimaryVariant">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorAccent</item>
+        <item name="colorPrimaryVariant">@color/colorAccent</item>
     </style>
+
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize the track color of SwitchCompat -->
         <item name="colorControlNormal">#FFFFFF</item>
     </style>
-    <style name="TextColor"><item name="android:textColor">@color/black</item></style>
+
+    <style name="TextColor">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="ButtonStandard">
+        <item name="android:backgroundTint">@color/colorAccent</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="Theme.HW7" parent="Base.Theme.HW7" />
 </resources>
