--- a/Android/Project/app/src/main/res/xml/root_preferences.xml
+++ b/Android/Project/app/src/main/res/xml/root_preferences.xml
@@ -1,41 +1,22 @@
 <PreferenceScreen
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory
-        app:title="@string/notifications">
+<!--    <PreferenceCategory-->
+<!--        app:title="@string/notifications">-->
 
-        <SwitchPreferenceCompat
-            app:key="send_notifications"
-            app:title="@string/enable_notifications"/>
+<!--        <SwitchPreferenceCompat-->
+<!--            app:key="send_notifications"-->
+<!--            app:title="@string/enable_notifications"/>-->
 
-        <EditTextPreference
-            app:key="signature"
-            app:title="@string/signature_title"
-            app:useSimpleSummaryProvider="true"/>
 
-        <ListPreference
-            app:key="reply"
-            app:title="@string/reply_title"
-            app:entries="@array/reply_entries"
-            app:entryValues="@array/reply_values"
-            app:defaultValue="reply"
-            app:useSimpleSummaryProvider="true"/>
-
-    </PreferenceCategory>
+<!--    </PreferenceCategory>-->
 
     <PreferenceCategory
         app:title="@string/records">
+        <Preference
+            app:key="delete_record"
+            app:title="@string/delete_record"/>
 
-        <SwitchPreferenceCompat
-            app:key="sync"
-            app:title="@string/sync_title"/>
-
-        <SwitchPreferenceCompat
-            app:key="attachment"
-            app:title="@string/attachment_title"
-            app:summaryOn="@string/attachment_summary_on"
-            app:summaryOff="@string/attachment_summary_off"
-            app:dependency="sync"/>
 
     </PreferenceCategory>
 
